--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -9,7 +9,7 @@ html {
 /* =============
     Variables
 ============= */
-/*! normalize.css v8.0.0 | MIT License | github.com/necolas/normalize.css */
+/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
 /**
@@ -29,6 +29,12 @@ html {
  */
 body {
   margin: 0; }
+
+/**
+ * Render the `main` element consistently in IE.
+ */
+main {
+  display: block; }
 
 /**
  * Correct the font size and margin on `h1` elements within `section` and
@@ -311,6 +317,11 @@ template {
 /* =============
     Base
 ============= */
+ul {
+  padding: 0; }
+  ul li {
+    list-style: none; }
+
 /* =============
     Typography
 ============= */
@@ -341,3 +352,60 @@ textarea {
 /* =============
     Footer
 ============= */
+/* =============
+    Section 1
+============= */
+#section-1 img {
+  width: 100%; }
+
+/* =============
+    Section 2
+============= */
+#section-2 #section-2-container {
+  display: grid;
+  grid-template-columns: 10px auto 10px;
+  grid-template-areas: ". section-2 ."; }
+  #section-2 #section-2-container #section-2-content {
+    grid-area: section-2; }
+
+#section-2 aside img {
+  width: 100%; }
+
+/* =============
+    Secttion 3
+============= */
+#section-3 #section-3-container {
+  display: grid;
+  grid-template-columns: 10px auto 10px;
+  grid-template-areas: ". section-3 ."; }
+  #section-3 #section-3-container #section-3-content {
+    grid-area: section-3; }
+
+#section-3 img {
+  width: 100%; }
+
+/* =============
+    Section 4
+============= */
+#section-4 {
+  display: grid;
+  grid-template-columns: 0 auto 0;
+  grid-template-areas: ". section-4 ."; }
+  #section-4 ul {
+    grid-area: section-4;
+    display: grid;
+    gap: 24px; }
+    #section-4 ul li img {
+      width: 100%; }
+
+/* =============
+    Section 5
+============= */
+#section-5 {
+  display: grid;
+  grid-template-columns: 10px auto 10px;
+  grid-template-areas: ". section-5 ."; }
+  #section-5 #section-5-content {
+    grid-area: section-5; }
+  #section-5 aside img {
+    width: 100%; }
