--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -352,6 +352,13 @@ textarea {
 /* =============
     Footer
 ============= */
+#footer {
+  display: grid;
+  grid-template-columns: 20px auto 20px;
+  grid-template-areas: ". footer ."; }
+  #footer #footer-content {
+    grid-area: footer; }
+
 /* =============
     Section 1
 ============= */
