--- a/dev/scss/layout/_footer.scss
+++ b/dev/scss/layout/_footer.scss
@@ -1,3 +1,13 @@
 /* =============
     Footer
 ============= */
+
+#footer{
+    display: grid;
+    grid-template-columns: 20px auto 20px;
+    grid-template-areas: ". footer .";
+
+    #footer-content{
+        grid-area: footer;
+    }
+}
