--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -368,6 +368,11 @@ textarea {
 /* =============
     Section 2
 ============= */
+@media (min-width: 768px) {
+  #section-2 {
+    display: grid;
+    grid-template-columns: 40% auto; } }
+
 #section-2 #section-2-container {
   display: grid;
   grid-template-columns: 10px auto 10px;
@@ -387,7 +392,11 @@ textarea {
   grid-template-areas: ". section-3 ."; }
   #section-3 #section-3-container #section-3-content {
     grid-area: section-3; }
-
+  @media (min-width: 768px) {
+    #section-3 #section-3-container {
+      display: grid;
+      grid-template-columns: 15% auto 15%;
+      grid-template-areas: ". section-3 ."; } }
 #section-3 img {
   width: 100%; }
 
@@ -402,9 +411,34 @@ textarea {
     grid-area: section-4;
     display: grid;
     gap: 24px; }
+    @media (min-width: 768px) {
+      #section-4 ul {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-areas: "g1 g1" "g2 g3"; } }
+    @media (min-width: 1200px) {
+      #section-4 ul {
+        grid-template-columns: 60% auto;
+        grid-template-areas: "g1 g2" "g1 g3"; } }
     #section-4 ul li img {
       width: 100%; }
-
+    @media (min-width: 768px) {
+      #section-4 ul #g1 {
+        grid-area: g1; } }
+    @media (min-width: 1200px) {
+      #section-4 ul #g1 {
+        grid-area: g1; } }
+    @media (min-width: 768px) {
+      #section-4 ul #g2 {
+        grid-area: g2; } }
+    @media (min-width: 1200px) {
+      #section-4 ul #g2 {
+        grid-area: g2; } }
+    @media (min-width: 768px) {
+      #section-4 ul #g3 {
+        grid-area: g3; } }
+    @media (min-width: 1200px) {
+      #section-4 ul #g3 {
+        grid-area: g3; } }
 /* =============
     Section 5
 ============= */
@@ -412,7 +446,21 @@ textarea {
   display: grid;
   grid-template-columns: 10px auto 10px;
   grid-template-areas: ". section-5 ."; }
+  @media (min-width: 1200px) {
+    #section-5 {
+      display: grid;
+      grid-template-columns: 30% auto;
+      grid-template-areas: "aside section-5-content"; } }
   #section-5 #section-5-content {
     grid-area: section-5; }
   #section-5 aside img {
     width: 100%; }
+  @media (min-width: 768px) {
+    #section-5 {
+      display: grid;
+      grid-template-columns: 15% auto 15%;
+      grid-template-areas: ". section-5 ."; }
+      #section-5 #section-5-content {
+        grid-area: section-5; }
+      #section-5 aside img {
+        width: 100%; } }
