--- a/dev/scss/sections/_section-3.scss
+++ b/dev/scss/sections/_section-3.scss
@@ -12,6 +12,14 @@
         #section-3-content{
             grid-area: section-3;
         }
-    }
+        
+        @include md{
+            display: grid;
+            grid-template-columns: 15% auto 15%;
+            grid-template-areas: ". section-3 .";
+        }
+
+    }   
+    
     img{width: 100%;}
 }
