--- a/dev/scss/sections/_section-5.scss
+++ b/dev/scss/sections/_section-5.scss
@@ -7,6 +7,12 @@
     grid-template-columns: 10px auto 10px;
     grid-template-areas: ". section-5 .";
 
+    @include xl{
+        display: grid;
+        grid-template-columns: 30% auto;
+        grid-template-areas: "aside section-5-content";
+    }
+
     #section-5-content{
         grid-area: section-5;
     }
@@ -15,5 +21,21 @@
         img{
             width: 100%;
         }
+    }
+
+    @include md{
+        display: grid;
+        grid-template-columns: 15% auto 15%;
+        grid-template-areas: ". section-5 .";
+
+        #section-5-content{
+        grid-area: section-5;
+        }
+
+        aside{
+        img{
+            width: 100%;
+        }
+    }
     }
 }
