--- a/dev/scss/sections/_section-5.scss
+++ b/dev/scss/sections/_section-5.scss
@@ -9,12 +9,21 @@
 
     @include xl{
         display: grid;
-        grid-template-columns: 30% auto;
-        grid-template-areas: "aside section-5-content";
+        grid-template-columns: auto 1200px auto;
+        grid-template-areas: ". section-5-content .";
     }
 
     #section-5-content{
         grid-area: section-5;
+
+        @include lg{
+            display: grid;
+            grid-template-columns: 30% auto;
+        }
+
+        @include xl{
+            grid-area: section-5-content;
+        }
     }
 
     aside{
@@ -33,9 +42,9 @@
         }
 
         aside{
-        img{
+            img{
             width: 100%;
+            }
         }
-    }
     }
 }
