--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -368,19 +368,34 @@ textarea {
 /* =============
     Section 2
 ============= */
-@media (min-width: 768px) {
+@media (min-width: 1200px) {
   #section-2 {
+    display: grid;
+    grid-template-columns: auto 1200px auto;
+    grid-template-areas: ". section-2-desktop ."; } }
+
+@media (min-width: 992px) {
+  #section-2 #section-2-desktop {
     display: grid;
     grid-template-columns: 40% auto; } }
 
-#section-2 #section-2-container {
+@media (min-width: 1200px) {
+  #section-2 #section-2-desktop {
+    grid-area: section-2-desktop; } }
+
+@media (min-width: 768px) {
+  #section-2 #section-2-desktop {
+    display: grid;
+    grid-template-columns: 40% auto; } }
+
+#section-2 #section-2-desktop #section-2-container {
   display: grid;
   grid-template-columns: 10px auto 10px;
   grid-template-areas: ". section-2 ."; }
-  #section-2 #section-2-container #section-2-content {
+  #section-2 #section-2-desktop #section-2-container #section-2-content {
     grid-area: section-2; }
 
-#section-2 aside img {
+#section-2 #section-2-desktop aside img {
   width: 100%; }
 
 /* =============
@@ -407,6 +422,9 @@ textarea {
   display: grid;
   grid-template-columns: 0 auto 0;
   grid-template-areas: ". section-4 ."; }
+  @media (min-width: 1200px) {
+    #section-4 {
+      grid-template-columns: auto 1200px auto; } }
   #section-4 ul {
     grid-area: section-4;
     display: grid;
@@ -449,10 +467,17 @@ textarea {
   @media (min-width: 1200px) {
     #section-5 {
       display: grid;
-      grid-template-columns: 30% auto;
-      grid-template-areas: "aside section-5-content"; } }
+      grid-template-columns: auto 1200px auto;
+      grid-template-areas: ". section-5-content ."; } }
   #section-5 #section-5-content {
     grid-area: section-5; }
+    @media (min-width: 992px) {
+      #section-5 #section-5-content {
+        display: grid;
+        grid-template-columns: 30% auto; } }
+    @media (min-width: 1200px) {
+      #section-5 #section-5-content {
+        grid-area: section-5-content; } }
   #section-5 aside img {
     width: 100%; }
   @media (min-width: 768px) {
