--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -362,9 +362,22 @@ textarea {
 /* =============
     Section 1
 ============= */
-#section-1 img {
-  width: 100%; }
-
+#section-1 {
+  background-image: url("../img/section-1/hero.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: left;
+  border: 1px solid red;
+  height: 371px; }
+  @media (min-width: 768px) {
+    #section-1 {
+      height: 513px; } }
+  @media (min-width: 992px) {
+    #section-1 {
+      height: 684px; } }
+  @media (min-width: 1200px) {
+    #section-1 {
+      height: 700px; } }
 /* =============
     Section 2
 ============= */
@@ -410,8 +423,14 @@ textarea {
   @media (min-width: 768px) {
     #section-3 #section-3-container {
       display: grid;
-      grid-template-columns: 15% auto 15%;
+      grid-template-columns: auto 60% auto;
       grid-template-areas: ". section-3 ."; } }
+  @media (min-width: 992px) {
+    #section-3 #section-3-container {
+      grid-template-columns: auto 50% auto; } }
+  @media (min-width: 1200px) {
+    #section-3 #section-3-container {
+      grid-template-columns: auto 800px auto; } }
 #section-3 img {
   width: 100%; }
 
@@ -428,7 +447,7 @@ textarea {
   #section-4 ul {
     grid-area: section-4;
     display: grid;
-    gap: 24px; }
+    gap: 20px; }
     @media (min-width: 768px) {
       #section-4 ul {
         grid-template-columns: repeat(2, 1fr);
@@ -462,7 +481,7 @@ textarea {
 ============= */
 #section-5 {
   display: grid;
-  grid-template-columns: 10px auto 10px;
+  grid-template-columns: 15px auto 15px;
   grid-template-areas: ". section-5 ."; }
   @media (min-width: 1200px) {
     #section-5 {
