--- a/dev/scss/sections/_section-2.scss
+++ b/dev/scss/sections/_section-2.scss
@@ -35,9 +35,15 @@
                 grid-area: section-2;
             }
         }
+
         aside{
-            img{
-                width: 100%;
+            background-image: url('../img/section-2/aside.png');
+            height: 60vh;
+            background-position: center;
+            background-size: cover;
+
+            @include lg{
+                height: 752px;
             }
         }
 
