--- a/dev/scss/sections/_section-3.scss
+++ b/dev/scss/sections/_section-3.scss
@@ -2,32 +2,53 @@
     Secttion 3
 ============= */
 
-#section-3{
+#section-3 {
 
-    #section-3-container{
+    #section-3-container {
         display: grid;
         grid-template-columns: 10px auto 10px;
         grid-template-areas: ". section-3 .";
 
-        #section-3-content{
+        #section-3-content {
+            color: $pink;
             grid-area: section-3;
+
+            margin-top: 40px;
+            margin-bottom: 40px;
         }
-        
-        @include md{
+
+        @include md {
             display: grid;
             grid-template-columns: auto 60% auto;
             grid-template-areas: ". section-3 .";
         }
 
-        @include lg{
+        @include lg {
             grid-template-columns: auto 50% auto;
         }
 
-        @include xl{
+        @include xl {
             grid-template-columns: auto 800px auto;
         }
 
-    }   
-    
-    img{width: 100%;}
+    }
+
+    background-image: url('../img/section-3/hero2.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: left;
+
+    height: 512px;
+
+    @include md {
+        height: 516px;
+    }
+
+    @include lg {
+        height: 683px;
+    }
+
+    @include xl {
+        height: 700px;
+    }
 }
