--- a/dev/scss/sections/_section-4.scss
+++ b/dev/scss/sections/_section-4.scss
@@ -7,24 +7,31 @@
     grid-template-columns: 0 auto 0;
     grid-template-areas: ". section-4 .";
 
-    @include xl{
+    @include lg{
         grid-template-columns: auto 1200px auto;
     }
 
     ul{
         grid-area: section-4;
+        grid-template-rows: repeat(3, 296px);
         display: grid;
         gap: 20px;
+        grid-template-areas: 
+        "g1"
+        "g2"
+        "g3";
 
         @include md{
             grid-template-columns: repeat(2, 1fr);
             grid-template-areas:
             "g1 g1"
+            "g1 g1"
             "g2 g3";
         }
 
-        @include xl{
+        @include lg{
             grid-template-columns: 60% auto;
+            grid-template-rows: repeat(2, 296px);
             grid-template-areas:
             "g1 g2"
             "g1 g3";
@@ -32,35 +39,37 @@
 
 
         li{
-            img{
-                width: 100%;
-            }
+           background-size: cover;
+           background-position: center;
         }
 
 
         #g1{
+            background-image: url('../img/section-4/gallery-1.jpg');
             @include md{
                 grid-area: g1;
             }
-            @include xl{
+            @include lg{
                 grid-area: g1;
             }
         }
 
         #g2{
+            background-image: url('../img/section-4/gallery-2.jpg');
             @include md{
                 grid-area: g2;
             }
-            @include xl{
+            @include lg{
                 grid-area: g2;
             }
         }
 
         #g3{
+            background-image: url('../img/section-4/gallery-3.jpg');
             @include md{
                 grid-area: g3;
             }
-            @include xl{
+            @include lg{
                 grid-area: g3;
             }
         }
