--- a/dev/scss/sections/_section-5.scss
+++ b/dev/scss/sections/_section-5.scss
@@ -2,49 +2,60 @@
     Section 5
 ============= */
 
-#section-5{
+#section-5 {
     display: grid;
     grid-template-columns: 15px auto 15px;
     grid-template-areas: ". section-5 .";
 
-    @include xl{
+    @include xl {
         display: grid;
         grid-template-columns: auto 1200px auto;
         grid-template-areas: ". section-5-content .";
     }
 
-    #section-5-content{
+    #section-5-content {
+        color: $dark;
         grid-area: section-5;
+        margin-bottom: 25px;
 
-        @include lg{
+        @include lg {
             display: grid;
             grid-template-columns: 30% auto;
+
+            p{
+                margin-top: 100px;
+                margin-bottom: 100px;
+            }
         }
 
-        @include xl{
+        @include xl {
             grid-area: section-5-content;
+
         }
     }
 
-    aside{
-        img{
-            width: 100%;
-        }
+    aside {
+        background-image: url(../img/section-5/circle-mask.png);
+         background-repeat: no-repeat;
+         height: 318px;
+
+        margin-bottom: 25px;
     }
 
-    @include md{
+    @include md {
         display: grid;
         grid-template-columns: 15% auto 15%;
         grid-template-areas: ". section-5 .";
 
-        #section-5-content{
-        grid-area: section-5;
+        #section-5-content {
+            grid-area: section-5;
         }
 
-        aside{
-            img{
-            width: 100%;
-            }
+        aside {
+         background-image: url(../img/section-5/circle-mask.png);
+         background-repeat: no-repeat;
+         height: 318px;
+
         }
     }
 }
