--- a/dev/scss/sections/_section-4.scss
+++ b/dev/scss/sections/_section-4.scss
@@ -1,78 +1,29 @@
 /* =============
-    Section 4
+    Secttion 4
 ============= */
 
-#section-4{
-    display: grid;
-    grid-template-columns: 0 auto 0;
-    grid-template-areas: ". section-4 .";
+#section-4 {
+     display: grid;
+        grid-template-columns: 10px auto 10px;
+        grid-template-areas: ". section-4 .";
 
-    @include lg{
-        grid-template-columns: auto 1200px auto;
-    }
-
-    ul{
+    #section-4-content {
+        color: $pink;
         grid-area: section-4;
-        grid-template-rows: repeat(3, 296px);
-        display: grid;
-        gap: 20px;
-        grid-template-areas: 
-        "g1"
-        "g2"
-        "g3";
 
-        @include md{
-            grid-template-columns: repeat(2, 1fr);
-            grid-template-areas:
-            "g1 g1"
-            "g1 g1"
-            "g2 g3";
-        }
-
-        @include lg{
-            grid-template-columns: 60% auto;
-            grid-template-rows: repeat(2, 296px);
-            grid-template-areas:
-            "g1 g2"
-            "g1 g3";
-        }
-
-
-        li{
-           background-size: cover;
-           background-position: center;
-        }
-
-
-        #g1{
-            background-image: url('../img/section-4/gallery-1.jpg');
-            @include md{
-                grid-area: g1;
-            }
-            @include lg{
-                grid-area: g1;
-            }
-        }
-
-        #g2{
-            background-image: url('../img/section-4/gallery-2.jpg');
-            @include md{
-                grid-area: g2;
-            }
-            @include lg{
-                grid-area: g2;
-            }
-        }
-
-        #g3{
-            background-image: url('../img/section-4/gallery-3.jpg');
-            @include md{
-                grid-area: g3;
-            }
-            @include lg{
-                grid-area: g3;
-            }
-        }
+        margin-top: 40px;
+        margin-bottom: 40px;
     }
 
+    @include md {
+         grid-template-columns: auto 60% auto;
+     }
+
+    @include lg {
+        grid-template-columns: auto 50% auto;
+    }
+
+    @include xl {
+            grid-template-columns: auto 800px auto;
+    }
 }
