--- a/dev/scss/sections/_section-5.scss
+++ b/dev/scss/sections/_section-5.scss
@@ -1,61 +1,72 @@
 /* =============
-    Section 5
+    Section 4
 ============= */
 
-#section-5 {
+#section-5{
     display: grid;
-    grid-template-columns: 15px auto 15px;
+    grid-template-columns: 0 auto 0;
     grid-template-areas: ". section-5 .";
 
-    @include xl {
-        display: grid;
+    @include lg{
         grid-template-columns: auto 1200px auto;
-        grid-template-areas: ". section-5-content .";
     }
 
-    #section-5-content {
-        color: $dark;
-        grid-area: section-5;
-        margin-bottom: 25px;
+    #section-5-content{
+        display: grid;
+        grid-template-rows: repeat(3, 296px);
+        gap: 20px;
+        grid-template-areas: 
+        "g1"
+        "g2"
+        "g3";
 
-        @include lg {
-            display: grid;
-            grid-template-columns: 30% auto;
+        @include md{
+            grid-template-columns: repeat(2, 1fr);
+            grid-template-areas:
+            "g1 g1"
+            "g1 g1"
+            "g2 g3";
+        }
 
-            p{
-                margin-top: 100px;
-                margin-bottom: 100px;
+        @include lg{
+            grid-template-columns: 60% auto;
+            grid-template-rows: repeat(2, 296px);
+            grid-template-areas:
+            "g1 g2"
+            "g1 g3";
+        }
+
+        @include xl{
+            grid-areas: section-5;
+        }
+
+
+        li{
+           background-size: cover;
+           background-position: center;
+        }
+
+
+        #g1{
+            background-image: url('../img/section-4/gallery-1.jpg');
+            @include md{
+                grid-area: g1;
             }
         }
 
-        @include xl {
-            grid-area: section-5-content;
+        #g2{
+            background-image: url('../img/section-4/gallery-2.jpg');
+            @include md{
+                grid-area: g2;
+            }
+        }
 
+        #g3{
+            background-image: url('../img/section-4/gallery-3.jpg');
+            @include md{
+                grid-area: g3;
+            }
         }
     }
 
-    aside {
-        background-image: url(../img/section-5/circle-mask.png);
-         background-repeat: no-repeat;
-         height: 318px;
-
-        margin-bottom: 25px;
-    }
-
-    @include md {
-        display: grid;
-        grid-template-columns: 15% auto 15%;
-        grid-template-areas: ". section-5 .";
-
-        #section-5-content {
-            grid-area: section-5;
-        }
-
-        aside {
-         background-image: url(../img/section-5/circle-mask.png);
-         background-repeat: no-repeat;
-         height: 318px;
-
-        }
-    }
 }
