--- a/dev/scss/sections/_section-5.scss
+++ b/dev/scss/sections/_section-5.scss
@@ -1,27 +1,30 @@
 /* =============
-    Section 4
+    Section 5
 ============= */
 
 #section-5{
     display: grid;
-    grid-template-columns: 0 auto 0;
+    grid-template-columns: 15px auto 15px;
     grid-template-areas: ". section-5 .";
 
-    @include lg{
+    @include xl{
+        grid-template-areas: ". section-5 .";
         grid-template-columns: auto 1200px auto;
     }
 
-    #section-5-content{
+    ul{
         display: grid;
-        grid-template-rows: repeat(3, 296px);
         gap: 20px;
+        grid-area: section-5;
+        grid-template-rows: repeat(3, 296px);
         grid-template-areas: 
         "g1"
         "g2"
         "g3";
 
         @include md{
-            grid-template-columns: repeat(2, 1fr);
+            grid-template-columns: 50% auto;
+            grid-template-rows: repeat(3, 340px);
             grid-template-areas:
             "g1 g1"
             "g1 g1"
@@ -30,14 +33,10 @@
 
         @include lg{
             grid-template-columns: 60% auto;
-            grid-template-rows: repeat(2, 296px);
+            grid-template-rows: repeat(2, 340px);
             grid-template-areas:
             "g1 g2"
             "g1 g3";
-        }
-
-        @include xl{
-            grid-areas: section-5;
         }
 
 
@@ -48,24 +47,18 @@
 
 
         #g1{
-            background-image: url('../img/section-4/gallery-1.jpg');
-            @include md{
-                grid-area: g1;
-            }
+            grid-area: g1;
+            background-image: url("../img/section-4/gallery-1.jpg");
         }
 
         #g2{
-            background-image: url('../img/section-4/gallery-2.jpg');
-            @include md{
-                grid-area: g2;
-            }
+            grid-area: g2;
+            background-image: url("../img/section-4/gallery-2.jpg");
         }
 
         #g3{
-            background-image: url('../img/section-4/gallery-3.jpg');
-            @include md{
-                grid-area: g3;
-            }
+            grid-area: g3;
+            background-image: url("../img/section-4/gallery-3.jpg");
         }
     }
 
