--- a/deploy/styles.css
+++ b/deploy/styles.css
@@ -445,6 +445,24 @@ textarea {
     #section-2 #section-2-desktop aside {
       height: 752px; } }
 /* =============
+    Secttion 3
+============= */
+#section-3 {
+  background-image: url("../img/section-3/hero2.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 371px; }
+  @media (min-width: 768px) {
+    #section-3 {
+      height: 513px; } }
+  @media (min-width: 992px) {
+    #section-3 {
+      height: 684px; } }
+  @media (min-width: 1200px) {
+    #section-3 {
+      height: 700px; } }
+/* =============
     Secttion 4
 ============= */
 #section-4 {
@@ -466,7 +484,7 @@ textarea {
     #section-4 {
       grid-template-columns: auto 800px auto; } }
 /* =============
-    Section 4
+    Section 5
 ============= */
 #section-5 {
   display: grid;
@@ -541,8 +559,8 @@ textarea {
       display: grid;
       grid-template-columns: 15% auto 15%;
       grid-template-areas: ". section-5 ."; }
-      #section-6 #section-5-content {
-        grid-area: section-5; }
+      #section-6 #section-6-content {
+        grid-area: section-6; }
       #section-6 aside {
         background-image: url(../img/section-5/circle-mask.png);
         background-repeat: no-repeat;
