--- a/dev/scss/sections/_section-4.scss
+++ b/dev/scss/sections/_section-4.scss
@@ -4,15 +4,17 @@
 
 #section-4 {
      display: grid;
-        grid-template-columns: 10px auto 10px;
-        grid-template-areas: ". section-4 .";
+    grid-template-columns: 10px auto 10px;
+    grid-template-areas: ". section-4 .";
+    text-align: center;
+     color: $pink;
+
+     h1{
+        font-size: rem-calc(27);
+    }
 
     #section-4-content {
-        color: $pink;
-        grid-area: section-4;
-
-        margin-top: 40px;
-        margin-bottom: 40px;
+        grid-area: section-4
     }
 
     @include md {
@@ -25,5 +27,11 @@
 
     @include xl {
             grid-template-columns: auto 800px auto;
+    }
+
+    hr{
+        border-color: $dark;
+        border-style: solid;
+        border-width: 1px;
     }
 }
