--- a/dev/scss/sections/_section-6.scss
+++ b/dev/scss/sections/_section-6.scss
@@ -11,44 +11,44 @@
         grid-template-columns: auto 1200px auto;
     }
 
-    #section-6-content {
+    #section-6-content{
         color: $dark;
         grid-area: section-6;
         margin-bottom: 25px;
+        text-align: justify;
 
-        @include lg {
+        p{
+            font-size: rem-calc(18);
+            padding-top: 25px;
+            @include lg{
+                padding-top: 50px;
+                padding-left: 150px;
+            }
+        }
+
+        @include lg{
             display: grid;
             grid-template-columns: 30% auto;
-
-            p{
-                margin-top: 100px;
-                margin-bottom: 100px;
-            }
         }
     }
 
-    aside {
+    aside{
         background-image: url(../img/section-5/circle-mask.png);
          background-repeat: no-repeat;
          height: 318px;
-
-        margin-bottom: 25px;
+         width: 318px;
+         border-radius: 100%;
+        background-position: bottom;
+        margin: 0 auto;
     }
 
-    @include md {
+    @include md{
         display: grid;
         grid-template-columns: 15% auto 15%;
-        grid-template-areas: ". section-5 .";
+        grid-template-areas: ". section-6 .";
 
-        #section-5-content {
-            grid-area: section-5;
-        }
-
-        aside {
-         background-image: url(../img/section-5/circle-mask.png);
-         background-repeat: no-repeat;
-         height: 318px;
-
+        #section-6-content {
+            grid-area: section-6;
         }
     }
 }
