--- a/dev/scss/components/_navigation.scss
+++ b/dev/scss/components/_navigation.scss
@@ -22,7 +22,7 @@
 
             a:link,
             a:visited {
-                color: $blue;
+                color: $pink;
                 text-decoration: none;
                 transition: 0.25s;
             }
